--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -1,20 +1,26 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
-.para,
-.small-para {
-  color: hsl(0, 0%, 0%);
+.para{
+  font-size: 22px;
   font-weight: 800;
 }
 
-.small-para {
+.text{
+  font-size: 22px;
+  font-weight: 100;
+}
+
+.small-para, .child {
   font-size: 14px;
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
+.button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  border-color:rgb(0,0,0);
 }
 
 .confirm {
@@ -22,21 +28,3 @@ body {
   color: white;
   font-weight: bold;
 } 
-
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
-
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
-}
