--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,27 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal{
+  display: flex;
+  padding: 12px;
+  gap:12px; 
+}
+.superior{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.inferior{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.header{
+  font-weight: bold;
+  font-size: larger;
+}
+.text{
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
