--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  
 }
 
 img {
@@ -23,4 +24,52 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+a{
+  text-decoration: none;
+}
+ul{
+  list-style: none;
+}
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;;
+}
+.left-links,.right-links{
+  display: flex;
+  justify-content: space-between;
+  gap:12px;
+}
+ul{
+  padding: 0%;
+  margin: 0%;
+}
+.buttons{
+  display: flex;
+  justify-content: center;
+  gap:12px;
+  padding: 15px;
+  height: 35px;
+  
+}
+.input{
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  
+}
+img{
+  display: flex;
+  margin: auto;
+  padding: 10px;
+}
+.footer{
+  background-color: #eeeeee;
 }
