applied flex for style

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,58 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body{
+  display: flex;
+  flex-direction: column;
+  
+}
+.header{
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding: 16px;
+}
+.footer{
+  background-color: #eeeeee;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+ul{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 24px;
+}
+
+.main{
+  display: flex;
+  flex: auto;
+  
+}
+
+.content{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap:5px;
+  padding: 48px;
+  
+}
+.card{
+  max-width: 250px;
+  text-align: center;
+  
+  padding: 2px;
+}
+.sidebar{
+  flex-shrink: 0;
+  width: 300px;
+  padding: 16px;
+}
