--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -4,6 +4,10 @@
 }
 
 .container {
+  display:grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 100px 100px 100 px 100px;
+  gap:4px;
   text-align: center;
 }
 
@@ -16,19 +20,41 @@
 }
 
 .header {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
   background-color: #393f4d;
+  grid-column: 1/3;
+}
+.logo{
+  display: grid;
+  justify-items:start;
+  grid-column:1/2;
+
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  
+  list-style: none;
 }
-
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+}
 .sidebar {
+  display: grid;
+  grid-template-rows:repeat(4, 1fr);
+  gap: 50px;
   background-color: #C50208;
+  grid-column: 1/2;
+  grid-row:2/4;
+ 
 }
 
 .sidebar .photo {
+  display: grid;
+  align-items: center;
   background-color: white;
   color: black;
   font-size: 12px;
@@ -38,23 +64,36 @@
 
 
 .sidebar .side-content {
+  display: grid;
+  align-items: center;
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+
 }
 
 .nav {
   background-color: #C50208;
+  grid-column: 2/3;
 }
-
+.nav ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
   background-color: #bccbde;
+  grid-column: 2/3;
+  gap:15px;
 }
 
 .article p {
@@ -68,6 +107,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  
 }
 
 .card p {
@@ -83,6 +123,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
 }
 
 .footer p {
